# curld

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  common.rs  config.rs  endpoints.rs  main.rs  run.rs  settings.rs  templates.rs
src/command/: settings.rs
src/endpoints/: commands.rs  endpoint_cli.rs  endpoint_settings.rs  history.rs  mod.rs  run.rs  run_cli.rs  saved.rs  saved_cli.rs  tests.rs  utils.rs
src/endpoints/tests/: mod.rs
src/run/: cli.rs  endpoint_settings.rs  mod.rs  mutators.rs  run_cli.rs  run_settings.rs  settings.rs  utils.rs
src/settings/: file.rs  global_settings.rs  mod.rs  traits.rs
src/templates/: mod.rs  parse.rs  template_builder.rs
src/variables/: builder.rs  mod.rs  mutators.rs  parse.rs  variables_builder.rs
src/workspaces/: cli.rs  mod.rs  mutators.rs  settings.rs
tests/run/: cli.rs
