[package]
name = "curld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
dirs = "4.0.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0.18", features = ["derive"] }

[dev-dependencies]
mockall = "0.11.3"
